# Academic-Flow-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
backend/: main.py
backend/api/: alunos.py  auth.py  auth_admin.py  fluxograma.py  materias.py  professores.py
backend/core/: database.py  lazy_loader.py
backend/data/: generate_data.py  materias_data.py
backend/data_store/db/: academic_flow.db
backend/data_store/parquet/: materias.parquet  materias_semestre.parquet
backend/models/: aluno_materia.py  disciplinas_professor.py  professor.py  refresh_token.py  return_schemas.py  schemas.py  user.py
